--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="wisteria">
     <ion-title>
-      Contact
+      Contáctanos
     </ion-title>
   </ion-navbar>
 </ion-header>
