--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,27 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="wisteria">
     <ion-title>
-      About
+      Acerca de...
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <ion-slides pager>
+    <ion-slide>
+      <img [src]="slides[0].image">
+      <h2>{{slides[0].title}}</h2>
+      <p>{{slides[0].description}}</p>
+    </ion-slide>
 
+    <ion-slide>
+        <h2>{{slides[1].title}}</h2>
+        <p>{{slides[1].description}}</p>
+    </ion-slide>
+
+    <ion-slide>
+        <img [src]="slides[1].image">
+      <h2>Ve al Home</h2>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
