--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-navbar color="wisteria">
     <ion-title>SOFIA LEDS</ion-title>
+    <ion-searchbar (input)="getItems($event)"></ion-searchbar>
   </ion-navbar>
 </ion-header>
 
